--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,56 @@
+async-generator==1.10
+async-timeout==4.0.2
+attrs==22.1.0
 beautifulsoup4==4.11.1
-certifi==2021.10.8
+certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.5
-distlib==0.3.4
-dnspython==2.2.1
-dominate==2.5.2
-email-validator==1.2.1
-filelock==3.4.2
+cryptography==37.0.4
+Deprecated==1.2.13
+dominate==2.7.0
 Flask==2.2.2
 Flask-Bootstrap==3.3.7.1
+Flask-CKEditor==0.4.6
+Flask-Gravatar==0.5.0
 Flask-Login==0.6.2
 Flask-SQLAlchemy==2.5.1
-Flask-WTF==0.14.3
+Flask-WTF==1.0.1
 greenlet==1.1.2
-gTTS==2.2.4
+gunicorn==20.1.0
+h11==0.13.0
 idna==3.3
-importlib-metadata==4.12.0
 itsdangerous==2.1.2
-jason==0.1.7
 Jinja2==3.1.2
+login==0.0.6
+lxml==4.9.1
 MarkupSafe==2.1.1
 numpy==1.23.0
+outcome==1.2.0
+packaging==21.3
 pandas==1.4.3
-Pillow==9.2.0
-pipenv==2022.1.8
-platformdirs==2.4.1
-playsound==1.3.0
-PyJWT==2.4.0
-pyperclip==1.8.2
+psycopg2-binary==2.9.3
+pycparser==2.21
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2022.1
+redis==4.3.4
 requests==2.28.1
+selenium==4.3.0
 six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
+spotipy==2.20.0
 SQLAlchemy==1.4.40
-ttkthemes==3.2.2
-twilio==7.12.0
-urllib3==1.26.10
-virtualenv==20.13.0
-virtualenv-clone==0.5.7
+trio==0.21.0
+trio-websocket==0.9.2
+urllib3==1.26.11
 visitor==0.1.3
 Werkzeug==2.2.2
-window==0.0.3
-WTForms==2.3.3
-zipp==3.8.1
+wrapt==1.14.1
+wsproto==1.1.0
+WTForms==3.0.1
